STYLE: Style the carousel slide

--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
   <!-- SECTION - TESTIMONIALS (TRY OUT) -->
     <div class="container bg-parc-lgrey">
       <div class="col py-4 mx-auto">
-        <div class="py-3">
-          <h2 class="py-3 text-center text-parc-dgrey">
+        <div class="pt-5">
+          <h2 class="text-center text-parc-dgrey">
             testimonials
           </h2>
         </div>
@@ -251,21 +251,20 @@
 
     <!-- Carousel Strip -->
     <div class="carousel-strip-wrapper overflow-auto container bg-parc-lgrey">
-      <div class="carousel-strip d-flex gap-3" id="carouselStrip">
+      <div class="carousel-strip d-flex gap-4 py-5" id="carouselStrip">
 
-        <div class="slide rounded bg-secondary text-white text-center">
+        <div class="slide bg-white text-white text-center">
           1
         </div>
-        <div class="slide rounded bg-secondary text-white text-center">2</div>
-        <div class="slide rounded bg-secondary text-white text-center">3</div>
-        <div class="slide rounded bg-secondary text-white text-center">4</div>
-        <div class="slide rounded bg-secondary text-white text-center">5</div>
-        <div class="slide rounded bg-secondary text-white text-center">6</div>
+        <div class="slide bg-white text-white text-center">2</div>
+        <div class="slide bg-white text-white text-center">3</div>
+        <div class="slide bg-white text-white text-center">4</div>
+        <div class="slide bg-white text-white text-center">5</div>
       </div>
     </div>
 
     <!-- Navigation Buttons -->
-    <div class="d-flex justify-content-center gap-3 py-3 bg-parc-lgrey">
+    <div class="d-flex justify-content-center gap-3 py-1 bg-parc-lgrey">
       <button class="btn btn-outline-primary" onclick="scrollCarouselLeft()">‹</button>
       <button class="btn btn-outline-primary" onclick="scrollCarouselRight()">›</button>
     </div>
@@ -285,7 +284,7 @@
     <div class="col py-4 mx-auto">
 
       <div class="container py-4">
-        <div class="container testimonials-card mx-auto d-flex gap-4">
+        <div class="container slide bg-white mx-auto d-flex gap-4">
           <div class="col-5 d-inline-block">
             <img class="testimonial-img" src="assets/images/testimonial-1.jpg" alt="Image of Angie at PCHEI 2024 Conference">
           </div>
