STYLE: Style testimonial slide

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     </div>
   </div>
 
-  <!-- SECTION - TESTIMONIALS (TRY OUT) -->
+  <!-- SECTION - TESTIMONIALS -->
     <div class="container bg-parc-lgrey">
       <div class="col py-4 mx-auto">
         <div class="pt-5">
@@ -253,13 +253,27 @@
     <div class="carousel-strip-wrapper overflow-auto container bg-parc-lgrey">
       <div class="carousel-strip d-flex gap-4 py-5" id="carouselStrip">
 
-        <div class="slide bg-white text-white text-center">
-          1
+        <div class="container slide bg-white mx-auto d-flex gap-4">
+          <div class="col-5 d-inline-block">
+            <img class="testimonial-img" src="assets/images/testimonial-1.jpg" alt="Image of Angie at PCHEI 2024 Conference">
+          </div>
+          <div class="col-7 d-inline-block">
+            <h6 class="py-3 mx-auto">
+              PCHEI Conference 2024
+            </h6>
+            <p class="text-1-000 mx-auto">
+              “I thoroughly enjoyed the workshop and felt challenged to think about this fascinating area in a compassionate space.”
+            </p>
+            <p class="text-0-875 text-parc-grey pt-3 mx-auto">
+              - Conference attendee
+            </p>
+          </div>
         </div>
-        <div class="slide bg-white text-white text-center">2</div>
-        <div class="slide bg-white text-white text-center">3</div>
-        <div class="slide bg-white text-white text-center">4</div>
-        <div class="slide bg-white text-white text-center">5</div>
+        <div class="slide bg-white text-center">2</div>
+        <div class="slide bg-white text-center">3</div>
+        <div class="slide bg-white text-center">4</div>
+        <div class="slide bg-white text-center">5</div>
+        
       </div>
     </div>
 
@@ -276,33 +290,6 @@
       <span class="dot" onclick="goToSlide(2)"></span>
       <span class="dot" onclick="goToSlide(3)"></span>
       <span class="dot" onclick="goToSlide(4)"></span>
-    </div>
-  </div>
-
-   <!-- SECTION - TESTIMONIALS -->
-  <div class="container bg-parc-lgrey">
-    <div class="col py-4 mx-auto">
-
-      <div class="container py-4">
-        <div class="container slide bg-white mx-auto d-flex gap-4">
-          <div class="col-5 d-inline-block">
-            <img class="testimonial-img" src="assets/images/testimonial-1.jpg" alt="Image of Angie at PCHEI 2024 Conference">
-          </div>
-          <div class="col-7 d-inline-block">
-            <h6 class="py-3">
-              PCHEI Conference 2024
-            </h6>
-            <p class="text-1-000">
-              “I thoroughly enjoyed the workshop and felt challenged to think about this fascinating area in a compassionate space.”
-            </p>
-            <p class="text-0-875 text-parc-grey pt-3">
-              - Conference attendee
-            </p>
-          </div>
-
-        </div>
-      </div>
-
     </div>
   </div>
 
