--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
     <div class="carousel-strip-wrapper overflow-auto container bg-parc-lgrey">
       <div class="carousel-strip d-flex gap-4 py-5" id="carouselStrip">
 
-        <div class="container slide bg-white mx-auto d-flex gap-4">
+        <!-- Testimonial 1 -->
+        <div class="container slide active-slide bg-white mx-auto d-flex gap-4">
           <div class="col-5 d-inline-block">
             <img class="testimonial-img" src="assets/images/testimonial-1.jpg" alt="Image of Angie at PCHEI 2024 Conference">
           </div>
@@ -269,6 +270,7 @@
             </p>
           </div>
         </div>
+
         <div class="slide bg-white text-center">2</div>
         <div class="slide bg-white text-center">3</div>
         <div class="slide bg-white text-center">4</div>
@@ -290,6 +292,14 @@
       <span class="dot" onclick="goToSlide(2)"></span>
       <span class="dot" onclick="goToSlide(3)"></span>
       <span class="dot" onclick="goToSlide(4)"></span>
+      <span class="dot" onclick="goToSlide(5)"></span>
+      <span class="dot" onclick="goToSlide(6)"></span>
+      <span class="dot" onclick="goToSlide(7)"></span>
+      <span class="dot" onclick="goToSlide(8)"></span>
+      <span class="dot" onclick="goToSlide(9)"></span>
+      <span class="dot" onclick="goToSlide(10)"></span>
+      <span class="dot" onclick="goToSlide(11)"></span>
+      <span class="dot" onclick="goToSlide(12)"></span>
     </div>
   </div>
 
