--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <!-- NAVBAR -->
-  <nav class="container navbar pt-1 pb-2">
+  <nav class="container bg-nav sticky-top pt-1 pb-2">
     <div class="col-11 col-md-10 col-lg-8 mx-auto navbar">
       <div>
         <a href="#">
