FEAT: Add 13 testimonials cards without content

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       <div class="carousel-strip d-flex gap-4 py-5" id="carouselStrip">
 
         <!-- Testimonial 1 -->
-        <div class="container slide active-slide bg-white mx-auto d-flex gap-4">
+        <div class="container slide bg-white mx-auto d-flex gap-4">
           <div class="col-5 d-inline-block">
             <img class="testimonial-img" src="assets/images/testimonial-1.jpg" alt="Image of Angie at PCHEI 2024 Conference">
           </div>
@@ -275,15 +275,23 @@
         <div class="slide bg-white text-center">3</div>
         <div class="slide bg-white text-center">4</div>
         <div class="slide bg-white text-center">5</div>
+        <div class="slide bg-white text-center">6</div>
+        <div class="slide bg-white text-center">7</div>
+        <div class="slide bg-white text-center">8</div>
+        <div class="slide bg-white text-center">9</div>
+        <div class="slide bg-white text-center">10</div>
+        <div class="slide bg-white text-center">11</div>
+        <div class="slide bg-white text-center">12</div>
+        <div class="slide bg-white text-center">13</div>
         
       </div>
     </div>
 
     <!-- Navigation Buttons -->
-    <div class="d-flex justify-content-center gap-3 py-1 bg-parc-lgrey">
+    <!-- <div class="d-flex justify-content-center gap-3 py-1 bg-parc-lgrey">
       <button class="btn btn-outline-primary" onclick="scrollCarouselLeft()">‹</button>
       <button class="btn btn-outline-primary" onclick="scrollCarouselRight()">›</button>
-    </div>
+    </div> -->
 
     <!-- Pagination Dots -->
     <div class="d-flex justify-content-center gap-2 pt-3 pb-5 bg-parc-lgrey" id="paginationDots">
