FEAT: Fill testimonial from js object

--- a/index.html
+++ b/index.html
@@ -254,20 +254,14 @@
       <div class="carousel-strip d-flex gap-4 py-5" id="carouselStrip">
 
         <!-- Testimonial 1 -->
-        <div class="container slide bg-white mx-auto d-flex gap-4">
+        <div class="container slide bg-white mx-auto d-flex gap-4 testimonial">
           <div class="col-5 d-inline-block">
-            <img class="testimonial-img" src="assets/images/testimonial-1.jpg" alt="Image of Angie at PCHEI 2024 Conference">
+            <img class="testimonial-img" src="" alt="">
           </div>
           <div class="col-7 d-inline-block">
-            <h6 class="py-3 mx-auto">
-              PCHEI Conference 2024
-            </h6>
-            <p class="text-1-000 mx-auto">
-              “I thoroughly enjoyed the workshop and felt challenged to think about this fascinating area in a compassionate space.”
-            </p>
-            <p class="text-0-875 text-parc-grey pt-3 mx-auto">
-              - Conference attendee
-            </p>
+            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
           </div>
         </div>
 
