FEAT: Add second testimonial slide

--- a/index.html
+++ b/index.html
@@ -254,18 +254,29 @@
       <div class="carousel-strip d-flex gap-4 py-5" id="carouselStrip">
 
         <!-- Testimonial 1 -->
-        <div class="container slide bg-white mx-auto d-flex gap-4 testimonial">
-          <div class="col-5 d-inline-block">
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col-5">
             <img class="testimonial-img" src="" alt="">
           </div>
-          <div class="col-7 d-inline-block">
+          <div class="col-7">
             <h6 class="py-3 mx-auto testimonial-header"></h6>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
           </div>
         </div>
 
-        <div class="slide bg-white text-center">2</div>
+        <!-- Testimonial 2 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col-5">
+            <img class="testimonial-img" src="" alt="">
+          </div>
+          <div class="col-7">
+            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+          </div>
+        </div>
+
         <div class="slide bg-white text-center">3</div>
         <div class="slide bg-white text-center">4</div>
         <div class="slide bg-white text-center">5</div>
