--- a/index.html
+++ b/index.html
@@ -277,17 +277,137 @@
           </div>
         </div>
 
-        <div class="slide bg-white text-center">3</div>
-        <div class="slide bg-white text-center">4</div>
-        <div class="slide bg-white text-center">5</div>
-        <div class="slide bg-white text-center">6</div>
-        <div class="slide bg-white text-center">7</div>
-        <div class="slide bg-white text-center">8</div>
-        <div class="slide bg-white text-center">9</div>
-        <div class="slide bg-white text-center">10</div>
-        <div class="slide bg-white text-center">11</div>
-        <div class="slide bg-white text-center">12</div>
-        <div class="slide bg-white text-center">13</div>
+        <!-- Testimonial 3 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col-5">
+            <img class="testimonial-img" src="" alt="">
+          </div>
+          <div class="col-7">
+            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 4 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col-5">
+            <img class="testimonial-img" src="" alt="">
+          </div>
+          <div class="col-7">
+            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 5 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col-5">
+            <img class="testimonial-img" src="" alt="">
+          </div>
+          <div class="col-7">
+            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 6 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col-5">
+            <img class="testimonial-img" src="" alt="">
+          </div>
+          <div class="col-7">
+            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 7 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col-5">
+            <img class="testimonial-img" src="" alt="">
+          </div>
+          <div class="col-7">
+            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 8 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col-5">
+            <img class="testimonial-img" src="" alt="">
+          </div>
+          <div class="col-7">
+            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 9 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col-5">
+            <img class="testimonial-img" src="" alt="">
+          </div>
+          <div class="col-7">
+            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 10 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col-5">
+            <img class="testimonial-img" src="" alt="">
+          </div>
+          <div class="col-7">
+            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 11 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col-5">
+            <img class="testimonial-img" src="" alt="">
+          </div>
+          <div class="col-7">
+            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 12 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col-5">
+            <img class="testimonial-img" src="" alt="">
+          </div>
+          <div class="col-7">
+            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+          </div>
+        </div>
+
+        <!-- Testimonial 13 -->
+        <div class="container slide bg-white mx-auto gap-4 testimonial">
+          <div class="col-5">
+            <img class="testimonial-img" src="" alt="">
+          </div>
+          <div class="col-7">
+            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <p class="text-1-000 mx-auto testimonial-body"></p>
+            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+          </div>
+        </div>
         
       </div>
     </div>
