STYLE: Add gradient softly fading sides of the carousel

--- a/index.html
+++ b/index.html
@@ -408,6 +408,9 @@
             <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
           </div>
         </div>
+
+        <div class="carousel-fade carousel-fade-left"></div>
+        <div class="carousel-fade carousel-fade-right"></div>
         
       </div>
     </div>
