--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="our-expertise-card">
           <div class="d-flex gap-3">
             <span>
-              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
+              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red" aria-hidden="true">
             </span> 
             <span>
               <h3 class="py-3 text-parc-red">training</h3>
@@ -137,7 +137,7 @@
         <div class="our-expertise-card">
           <div class="d-flex gap-3">
             <span>
-              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
+              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red" aria-hidden="true">
             </span> 
             <span>
               <h3 class="py-3 text-parc-red">consultancy</h3>
@@ -166,7 +166,7 @@
         <div class="our-expertise-card">
           <div class="d-flex gap-3">
             <span>
-              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
+              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red" aria-hidden="true">
             </span> 
             <span>
               <h3 class="py-3 text-parc-red">supervision</h3>
@@ -198,7 +198,7 @@
     <div class="col-10 col-lg-7 py-5 mx-auto text-white">
       <div class="d-flex gap-4">
           <span class="d-flex align-items-centre">
-            <img class="our-icon" src="assets/images/icon-vision.svg" alt="Icon for Our Vision paragraph (an eye)">
+            <img class="our-icon" src="assets/images/icon-vision.svg" alt="Icon for Our Vision paragraph (an eye)" aria-hidden="true">
           </span> 
           <span>
             <h2 class="py-3">our vision</h2>
@@ -219,7 +219,7 @@
     <div class="col-10 col-lg-7 py-5 mx-auto text-white">
       <div class="d-flex gap-4">
           <span class="d-flex align-items-centre">
-            <img class="our-icon" src="assets/images/icon-mission.svg" alt="Icon for Our Vision paragraph (an eye)">
+            <img class="our-icon" src="assets/images/icon-mission.svg" alt="Icon for Our Mission paragraph (a target with arrow in bull's eye)" aria-hidden="true">
           </span> 
           <span>
             <h2 class="py-3">our mission</h2>
@@ -455,9 +455,14 @@
         </l>
       </div>
       <div>
+        <span class="footer-links" aria-label="Linkedin">
+          <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
+        </span>
+      </div>
+      <div>
         <span class="footer-links">
           <a class="text-1-000 py-3 px-5 rounded" href="mailto:parctrainingireland@gmail.com?subject=Hello!&body=Hello%2C%0A%0AI%20would%20like%20to%20ask%20about%20your%20services...%0A%0AKind%20regards%2C">
-            <span><i class="fa-regular fa-envelope text-1-250 px-1"></i></span>
+            <span><i class="fa-regular fa-envelope text-1-250 px-1" aria-hidden="true"></i></span>
             <span>parctrainingireland@gmail.com</span>
           </a>
         </span>
@@ -474,8 +479,8 @@
 
   <!-- Scroll to top button -->
   <div class="container">
-    <button id="scrollTopBtn" title="Go to top">
-      <i class="fa-solid fa-arrow-up"></i>
+    <button id="scrollTopBtn" title="Go to top" aria-label="Go to top icon">
+      <i class="fa-solid fa-arrow-up" aria-hidden="true"></i>
     </button>
   </div>
 
