FEAT: Add Linkedin icon in the footer

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="our-expertise-card">
           <div class="d-flex gap-3">
             <span>
-              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red" aria-hidden="true">
+              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
             </span> 
             <span>
               <h3 class="py-3 text-parc-red">training</h3>
@@ -137,7 +137,7 @@
         <div class="our-expertise-card">
           <div class="d-flex gap-3">
             <span>
-              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red" aria-hidden="true">
+              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
             </span> 
             <span>
               <h3 class="py-3 text-parc-red">consultancy</h3>
@@ -166,7 +166,7 @@
         <div class="our-expertise-card">
           <div class="d-flex gap-3">
             <span>
-              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red" aria-hidden="true">
+              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
             </span> 
             <span>
               <h3 class="py-3 text-parc-red">supervision</h3>
@@ -198,7 +198,7 @@
     <div class="col-10 col-lg-7 py-5 mx-auto text-white">
       <div class="d-flex gap-4">
           <span class="d-flex align-items-centre">
-            <img class="our-icon" src="assets/images/icon-vision.svg" alt="Icon for Our Vision paragraph (an eye)" aria-hidden="true">
+            <img class="our-icon" src="assets/images/icon-vision.svg" alt="Icon for Our Vision paragraph (an eye)">
           </span> 
           <span>
             <h2 class="py-3">our vision</h2>
@@ -219,7 +219,7 @@
     <div class="col-10 col-lg-7 py-5 mx-auto text-white">
       <div class="d-flex gap-4">
           <span class="d-flex align-items-centre">
-            <img class="our-icon" src="assets/images/icon-mission.svg" alt="Icon for Our Mission paragraph (a target with arrow in bull's eye)" aria-hidden="true">
+            <img class="our-icon" src="assets/images/icon-mission.svg" alt="Icon for Our Mission paragraph (a target with arrow in bull's eye)">
           </span> 
           <span>
             <h2 class="py-3">our mission</h2>
@@ -455,8 +455,8 @@
         </l>
       </div>
       <div>
-        <span class="footer-links" aria-label="Linkedin">
-          <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
+        <span class="" aria-label="Linkedin">
+          <i class="fa-brands fa-linkedin-in text-parc-dgrey" aria-hidden="true"></i>
         </span>
       </div>
       <div>
