FEAT: Add Linkedin link in the footer

--- a/index.html
+++ b/index.html
@@ -455,8 +455,11 @@
         </l>
       </div>
       <div>
-        <span class="" aria-label="Linkedin">
-          <i class="fa-brands fa-linkedin-in text-parc-dgrey" aria-hidden="true"></i>
+        <span class="">
+          <a href="https://www.linkedin.com/company/parc-training-ireland/" target="_blank" aria-label="Linkedin">
+            <i class="fa-brands fa-linkedin-in text-parc-dgrey" aria-hidden="true"></i>
+          </a>
+          
         </span>
       </div>
       <div>
