--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <img src="assets/images/parc-petal-black.svg" class="overlay-img" alt="Overlay element">
     <div class="col-10 col-lg-8 mx-auto">
       <div class="container">
-        <img src="assets/images/home-jumbotron-pic.png" class="background-img" alt="Image of the tall grass on the top of the hill overlooking the sea in the sunset">
+        <img src="assets/images/home-jumbotron-pic.webp" class="background-img" alt="Image of the tall grass on the top of the hill overlooking the sea in the sunset">
         <h2 class="text-white"> we are PARC training</h2>
         <p class="text-white py-2">
           Promoting Anti-discriminatory Responses for Change in the mental health field. <br>
