FIX: Accessibility - improve text contrast

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         </a>
       </div>
       <div>
-        <l class="nav-links">
+        <ul class="nav-links">
           <li class="d-inline"><a class="px-4 py-3 rounded" href="#">home</a></li>
           <li class="d-inline"><a class="px-4 py-3 rounded" href="#">about us</a></li>
           <li class="d-inline"><a class="px-4 py-3 rounded" href="#">contact</a></li>
-        </l>
+        </ul>
       </div>
     </div>
   </nav>
@@ -261,7 +261,7 @@
           <div class="col-7">
             <h6 class="py-3 mx-auto testimonial-header"></h6>
             <p class="text-1-000 mx-auto testimonial-body"></p>
-            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+            <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
         </div>
 
@@ -273,7 +273,7 @@
           <div class="col-7">
             <h6 class="py-3 mx-auto testimonial-header"></h6>
             <p class="text-1-000 mx-auto testimonial-body"></p>
-            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+            <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
         </div>
 
@@ -285,7 +285,7 @@
           <div class="col-7">
             <h6 class="py-3 mx-auto testimonial-header"></h6>
             <p class="text-1-000 mx-auto testimonial-body"></p>
-            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+            <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
         </div>
 
@@ -297,7 +297,7 @@
           <div class="col-7">
             <h6 class="py-3 mx-auto testimonial-header"></h6>
             <p class="text-1-000 mx-auto testimonial-body"></p>
-            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+            <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
         </div>
 
@@ -309,7 +309,7 @@
           <div class="col-7">
             <h6 class="py-3 mx-auto testimonial-header"></h6>
             <p class="text-1-000 mx-auto testimonial-body"></p>
-            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+            <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
         </div>
 
@@ -321,7 +321,7 @@
           <div class="col-7">
             <h6 class="py-3 mx-auto testimonial-header"></h6>
             <p class="text-1-000 mx-auto testimonial-body"></p>
-            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+            <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
         </div>
 
@@ -333,7 +333,7 @@
           <div class="col-7">
             <h6 class="py-3 mx-auto testimonial-header"></h6>
             <p class="text-1-000 mx-auto testimonial-body"></p>
-            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+            <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
         </div>
 
@@ -345,7 +345,7 @@
           <div class="col-7">
             <h6 class="py-3 mx-auto testimonial-header"></h6>
             <p class="text-1-000 mx-auto testimonial-body"></p>
-            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+            <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
         </div>
 
@@ -357,7 +357,7 @@
           <div class="col-7">
             <h6 class="py-3 mx-auto testimonial-header"></h6>
             <p class="text-1-000 mx-auto testimonial-body"></p>
-            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+            <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
         </div>
 
@@ -369,7 +369,7 @@
           <div class="col-7">
             <h6 class="py-3 mx-auto testimonial-header"></h6>
             <p class="text-1-000 mx-auto testimonial-body"></p>
-            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+            <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
         </div>
 
@@ -381,7 +381,7 @@
           <div class="col-7">
             <h6 class="py-3 mx-auto testimonial-header"></h6>
             <p class="text-1-000 mx-auto testimonial-body"></p>
-            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+            <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
         </div>
 
@@ -393,7 +393,7 @@
           <div class="col-7">
             <h6 class="py-3 mx-auto testimonial-header"></h6>
             <p class="text-1-000 mx-auto testimonial-body"></p>
-            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+            <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
         </div>
 
@@ -405,7 +405,7 @@
           <div class="col-7">
             <h6 class="py-3 mx-auto testimonial-header"></h6>
             <p class="text-1-000 mx-auto testimonial-body"></p>
-            <p class="text-0-875 text-parc-grey pt-3 mx-auto testimonial-small"></p>
+            <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
         </div>
 
