FIX: Accessibility - put li elements inside ul and darken footer background

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <p class="fw-bold">
               Topics covered:
             </p>
-            <l>
+            <ul class="our-expertise-list">
               <li>
                 Diversity in an Irish context
               </li>
@@ -119,7 +119,7 @@
               <li>
                 Multicultural supervision
               </li>
-            </l>
+            </ul>
           </div>
           <div class="container d-flex justify-content-end">
             <div class="col button py-1 button-card">
@@ -440,7 +440,7 @@
   </div>
 
   <!-- FOOTER -->
-  <footer class="container text-parc-lgrey bg-parc-dgrey pt-4 pb-1">
+  <footer class="container text-parc-lgrey bg-parc-ddgrey pt-4 pb-1">
     <div class="col-11 section-footer py-5">
       <div>
         <a href="#">
@@ -448,11 +448,11 @@
         </a>
       </div>
       <div>
-        <l class="footer-links">
+        <ul class="footer-links">
           <li><a class="py-3 px-4 rounded" href="">home</a></li>
           <li><a class="py-3 px-4 rounded" href="">about us</a></li>
           <li><a class="py-3 px-4 rounded" href="">contact</a></li>
-        </l>
+        </ul>
       </div>
       <div>
         <span class="">
