FIX: Accessibility - organise heading hierarchy

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="col-10 col-lg-8 mx-auto">
       <div class="container">
         <img src="assets/images/home-jumbotron-pic.webp" class="background-img" alt="Image of the tall grass on the top of the hill overlooking the sea in the sunset">
-        <h2 class="text-white"> we are PARC training</h2>
+        <p class="text-jumbotron text-white"> we are PARC training</p>
         <p class="text-white py-2">
           Promoting Anti-discriminatory Responses for Change in the mental health field. <br>
           If you are interested in learning more about diverse and inclusive practice get in touch with us today.
@@ -81,7 +81,7 @@
               <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
             </span> 
             <span>
-              <h3 class="py-3 text-parc-red">training</h3>
+              <h2 class="py-3 text-parc-red">training</h2>
             </span> 
           </div>
           <div class="pb-4">
@@ -140,7 +140,7 @@
               <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
             </span> 
             <span>
-              <h3 class="py-3 text-parc-red">consultancy</h3>
+              <h2 class="py-3 text-parc-red">consultancy</h2>
             </span> 
           </div>
           <div class="pb-4">
@@ -169,7 +169,7 @@
               <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
             </span> 
             <span>
-              <h3 class="py-3 text-parc-red">supervision</h3>
+              <h2 class="py-3 text-parc-red">supervision</h2>
             </span> 
           </div>
           <div class="pb-4">
@@ -259,7 +259,7 @@
             <img class="testimonial-img" src="" alt="">
           </div>
           <div class="col-7">
-            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
@@ -271,7 +271,7 @@
             <img class="testimonial-img" src="" alt="">
           </div>
           <div class="col-7">
-            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
@@ -283,7 +283,7 @@
             <img class="testimonial-img" src="" alt="">
           </div>
           <div class="col-7">
-            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
@@ -295,7 +295,7 @@
             <img class="testimonial-img" src="" alt="">
           </div>
           <div class="col-7">
-            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
@@ -307,7 +307,7 @@
             <img class="testimonial-img" src="" alt="">
           </div>
           <div class="col-7">
-            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
@@ -319,7 +319,7 @@
             <img class="testimonial-img" src="" alt="">
           </div>
           <div class="col-7">
-            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
@@ -331,7 +331,7 @@
             <img class="testimonial-img" src="" alt="">
           </div>
           <div class="col-7">
-            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
@@ -343,7 +343,7 @@
             <img class="testimonial-img" src="" alt="">
           </div>
           <div class="col-7">
-            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
@@ -355,7 +355,7 @@
             <img class="testimonial-img" src="" alt="">
           </div>
           <div class="col-7">
-            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
@@ -367,7 +367,7 @@
             <img class="testimonial-img" src="" alt="">
           </div>
           <div class="col-7">
-            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
@@ -379,7 +379,7 @@
             <img class="testimonial-img" src="" alt="">
           </div>
           <div class="col-7">
-            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
@@ -391,7 +391,7 @@
             <img class="testimonial-img" src="" alt="">
           </div>
           <div class="col-7">
-            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
@@ -403,7 +403,7 @@
             <img class="testimonial-img" src="" alt="">
           </div>
           <div class="col-7">
-            <h6 class="py-3 mx-auto testimonial-header"></h6>
+            <h3 class="py-3 mx-auto testimonial-header"></h3>
             <p class="text-1-000 mx-auto testimonial-body"></p>
             <p class="text-0-875 text-parc-dgrey pt-3 mx-auto testimonial-small"></p>
           </div>
