FIX: SEO - add meta description of the website

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>PARC Training | Promoting Anti-Discriminatory Responses for Change</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="PARC Training provides training for Mental Health Proffesionals,
+    raising awareness about the conscious and unconscious bias, discrimination and prejudice towards members of diverse and minority groups.">
+  <meta name="author" content="PARC Training">
 
   <!-- Favicon -->
   <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
@@ -229,8 +232,8 @@
         <p class="text-1-250">
           To raise awareness and depth of understanding in Mental Health Professionals on the impact of conscious and unconscious bias,
           discrimination and prejudice on members of diverse groups and develop an inclusive practice in order to provide a meaningful experience for service users.
-        </p class="text-1-250">
-         <p>
+        </p>
+         <p class="text-1-250">
           This will be accomplished through training, supervision, reflective learning,
           consultation and ongoing support building competency, confidence, and skills in Mental Health Professionals.
         </p>
