--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 
   <!-- FOOTER -->
   <footer class="container text-parc-lgrey bg-parc-ddgrey pt-4 pb-1">
-    <div class="col-11 section-footer py-5">
+    <div class="col-11 section-footer">
       <div>
         <a href="#">
           <img src="assets/images/parc-logo-white.svg" alt="Description of the image" class="d-inline-block">
@@ -452,9 +452,9 @@
       </div>
       <div>
         <ul class="footer-links">
-          <li><a class="py-3 px-4 rounded" href="">home</a></li>
-          <li><a class="py-3 px-4 rounded" href="">about us</a></li>
-          <li><a class="py-3 px-4 rounded" href="">contact</a></li>
+          <li><a class="py-2 px-4 rounded" href="">home</a></li>
+          <li><a class="py-2 px-4 rounded" href="">about us</a></li>
+          <li><a class="py-2 px-4 rounded" href="">contact</a></li>
         </ul>
       </div>
       <div>
@@ -467,7 +467,7 @@
       </div>
       <div>
         <span class="footer-links">
-          <a class="text-1-000 py-3 px-5 rounded" href="mailto:parctrainingireland@gmail.com?subject=Hello!&body=Hello%2C%0A%0AI%20would%20like%20to%20ask%20about%20your%20services...%0A%0AKind%20regards%2C">
+          <a class="text-1-000 py-2 px-4 rounded" href="mailto:parctrainingireland@gmail.com?subject=Hello!&body=Hello%2C%0A%0AI%20would%20like%20to%20ask%20about%20your%20services...%0A%0AKind%20regards%2C">
             <span><i class="fa-regular fa-envelope text-1-250 px-1" aria-hidden="true"></i></span>
             <span>parctrainingireland@gmail.com</span>
           </a>
