STYLE: Responsive - footer, center align links and logo on mobile sizes

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
     <div class="col-11 section-footer">
       <div>
         <a href="#">
-          <img src="assets/images/parc-logo-white.svg" alt="Description of the image" class="d-inline-block">
+          <img src="assets/images/parc-logo-white.svg" alt="Description of the image" class="footer-logo">
         </a>
       </div>
       <div>
@@ -460,7 +460,7 @@
       <div>
         <span class="">
           <a href="https://www.linkedin.com/company/parc-training-ireland/" target="_blank" aria-label="Linkedin">
-            <i class="fa-brands fa-linkedin-in text-parc-dgrey" aria-hidden="true"></i>
+            <i class="fa-brands fa-linkedin-in text-parc-ddgrey" aria-hidden="true"></i>
           </a>
           
         </span>
