STYLE: Responsive - footer, center align linkedin icon for mobile

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
       </div>
       <div>
         <span class="">
-          <a href="https://www.linkedin.com/company/parc-training-ireland/" target="_blank" aria-label="Linkedin">
+          <a href="https://www.linkedin.com/company/parc-training-ireland/" class="link-linkedin" target="_blank" aria-label="Linkedin">
             <i class="fa-brands fa-linkedin-in text-parc-ddgrey" aria-hidden="true"></i>
           </a>
           
