--- a/index.html
+++ b/index.html
@@ -29,18 +29,25 @@
 <body>
   <!-- NAVBAR -->
   <nav class="container bg-nav sticky-top pt-1 pb-2">
-    <div class="col-11 col-md-10 col-lg-8 mx-auto navbar">
+    <div class="col-11 col-lg-8 mx-auto navbar">
       <div>
         <a href="#">
           <img src="assets/images/parc-logo-color.svg" alt="PARC logo in colour" class="d-inline">
         </a>
       </div>
-      <div>
-        <ul class="nav-links">
+      <!-- navigation desktop -->
+      <div class="navigation-desktop">
+        <ul class="nav-links my-auto">
           <li class="d-inline"><a class="px-4 py-3 rounded" href="#">home</a></li>
           <li class="d-inline"><a class="px-4 py-3 rounded" href="#">about us</a></li>
           <li class="d-inline"><a class="px-4 py-3 rounded" href="#">contact</a></li>
         </ul>
+      </div>
+      <!-- navigation mobile -->
+      <div class="navigation-mobile">
+        <button>
+          <p>aaa</p>
+        </button>
       </div>
     </div>
   </nav>
