FEAT: Add hamburger menu overlay screen

--- a/index.html
+++ b/index.html
@@ -45,12 +45,20 @@
       </div>
       <!-- navigation mobile -->
       <div class="navigation-mobile">
-        <button>
-          <p>aaa</p>
-        </button>
+        <div class="hamburger" id="hamburger">
+          <span><i class="fa-solid fa-bars text-1-500 text-parc-red" aria-hidden="true"></i></span>
+        </div>
       </div>
     </div>
   </nav>
+  <!-- Mobile menu overlay -->
+  <div class="menu-overlay" id="menu-overlay">
+    <ul>
+      <li><a href="#">home</a></li>
+      <li><a href="#">about us</a></li>
+      <li><a href="#">contact</a></li>
+    </ul>
+  </div>
 
   <!-- HEADER -->
   <header class="container header header-image">
