FEAT: Add hamburger menu closing button

--- a/index.html
+++ b/index.html
@@ -46,18 +46,27 @@
       <!-- navigation mobile -->
       <div class="navigation-mobile">
         <div class="hamburger" id="hamburger">
-          <span><i class="fa-solid fa-bars text-1-500 text-parc-red" aria-hidden="true"></i></span>
+          <span class="cursor-auto">
+            <i class="fa-solid fa-bars text-1-500 text-parc-red" aria-hidden="true"></i>
+          </span>
         </div>
       </div>
     </div>
   </nav>
   <!-- Mobile menu overlay -->
   <div class="menu-overlay" id="menu-overlay">
-    <ul>
-      <li><a href="#">home</a></li>
-      <li><a href="#">about us</a></li>
-      <li><a href="#">contact</a></li>
-    </ul>
+    <div class="close-button d-block" id="close-button">
+      <span class="cursor-auto">
+        <i class="fa-solid fa-xmark text-1-500 text-parc-red" aria-hidden="true"></i>
+      </span>
+    </div>
+    <div class="d-block">
+      <ul class="">
+        <li><a href="#">home</a></li>
+        <li><a href="#">about us</a></li>
+        <li><a href="#">contact</a></li>
+      </ul>
+    </div>
   </div>
 
   <!-- HEADER -->
