--- a/index.html
+++ b/index.html
@@ -57,8 +57,13 @@
   <div class="menu-overlay" id="menu-overlay">
     <div class="close-button d-block" id="close-button">
       <span class="cursor-auto">
-        <i class="fa-solid fa-xmark text-1-500 text-parc-red" aria-hidden="true"></i>
+        <i class="fa-solid fa-xmark text-1-500 text-white" aria-hidden="true"></i>
       </span>
+    </div>
+    <div>
+      <a href="#">
+        <img src="assets/images/parc-logo-white.svg" alt="Description of the image" class="footer-logo">
+      </a>
     </div>
     <div class="d-block">
       <ul class="">
@@ -66,6 +71,17 @@
         <li><a href="#">about us</a></li>
         <li><a href="#">contact</a></li>
       </ul>
+    </div>
+    <div class="">
+      <a href="https://www.linkedin.com/company/parc-training-ireland/" class="link-linkedin" target="_blank" aria-label="Linkedin">
+        <i class="fa-brands fa-linkedin-in text-parc-red bg-white" aria-hidden="true"></i>
+      </a>
+    </div>
+    <div class="footer-links">
+      <a class="text-1-000 py-2 px-4 rounded" href="mailto:parctrainingireland@gmail.com?subject=Hello!&body=Hello%2C%0A%0AI%20would%20like%20to%20ask%20about%20your%20services...%0A%0AKind%20regards%2C">
+        <span><i class="fa-regular fa-envelope text-1-250 px-1" aria-hidden="true"></i></span>
+        <span>parctrainingireland@gmail.com</span>
+      </a>
     </div>
   </div>
 
@@ -486,7 +502,6 @@
           <a href="https://www.linkedin.com/company/parc-training-ireland/" class="link-linkedin" target="_blank" aria-label="Linkedin">
             <i class="fa-brands fa-linkedin-in text-parc-ddgrey" aria-hidden="true"></i>
           </a>
-          
         </span>
       </div>
       <div>
