--- a/index.html
+++ b/index.html
@@ -55,32 +55,32 @@
   </nav>
   <!-- Mobile menu overlay -->
   <div class="menu-overlay" id="menu-overlay">
-    <div class="close-button d-block" id="close-button">
+    <div class="close-button d-block p-4" id="close-button">
       <span class="cursor-auto">
         <i class="fa-solid fa-xmark text-1-500 text-white" aria-hidden="true"></i>
       </span>
     </div>
     <div>
       <a href="#">
-        <img src="assets/images/parc-logo-white.svg" alt="Description of the image" class="footer-logo">
+        <img src="assets/images/parc-logo-white.svg" alt="Description of the image" class="px-5 pt-3 pb-5 d-none">
       </a>
     </div>
-    <div class="d-block">
+    <div class="d-block p-5">
       <ul class="">
-        <li><a href="#">home</a></li>
-        <li><a href="#">about us</a></li>
-        <li><a href="#">contact</a></li>
+        <li class="py-4"><a href="#">home</a></li>
+        <li class="py-4"><a href="#">about us</a></li>
+        <li class="py-4"><a href="#">contact</a></li>
       </ul>
     </div>
-    <div class="">
+    <div class="py-5">
       <a href="https://www.linkedin.com/company/parc-training-ireland/" class="link-linkedin" target="_blank" aria-label="Linkedin">
         <i class="fa-brands fa-linkedin-in text-parc-red bg-white" aria-hidden="true"></i>
       </a>
     </div>
-    <div class="footer-links">
-      <a class="text-1-000 py-2 px-4 rounded" href="mailto:parctrainingireland@gmail.com?subject=Hello!&body=Hello%2C%0A%0AI%20would%20like%20to%20ask%20about%20your%20services...%0A%0AKind%20regards%2C">
-        <span><i class="fa-regular fa-envelope text-1-250 px-1" aria-hidden="true"></i></span>
-        <span>parctrainingireland@gmail.com</span>
+    <div class="footer-links py-5">
+      <a class="text-1-125 py-2 px-4 rounded" href="mailto:parctrainingireland@gmail.com?subject=Hello!&body=Hello%2C%0A%0AI%20would%20like%20to%20ask%20about%20your%20services...%0A%0AKind%20regards%2C">
+        <span><i class="fa-regular fa-envelope text-1-125 px-1" aria-hidden="true"></i></span>
+        <span class="text-1-125">parctrainingireland@gmail.com</span>
       </a>
     </div>
   </div>
