STYLE: Hamburger menu overlay, reduce padding of elements

--- a/index.html
+++ b/index.html
@@ -60,27 +60,22 @@
         <i class="fa-solid fa-xmark text-1-500 text-white" aria-hidden="true"></i>
       </span>
     </div>
-    <div>
-      <a href="#">
-        <img src="assets/images/parc-logo-white.svg" alt="Description of the image" class="px-5 pt-3 pb-5 d-none">
-      </a>
-    </div>
-    <div class="d-block p-5">
+    <div class="d-block py-2">
       <ul class="">
         <li class="py-4"><a href="#">home</a></li>
         <li class="py-4"><a href="#">about us</a></li>
         <li class="py-4"><a href="#">contact</a></li>
       </ul>
     </div>
-    <div class="py-5">
+    <div class="py-3">
       <a href="https://www.linkedin.com/company/parc-training-ireland/" class="link-linkedin" target="_blank" aria-label="Linkedin">
         <i class="fa-brands fa-linkedin-in text-parc-red bg-white" aria-hidden="true"></i>
       </a>
     </div>
-    <div class="footer-links py-5">
-      <a class="text-1-125 py-2 px-4 rounded" href="mailto:parctrainingireland@gmail.com?subject=Hello!&body=Hello%2C%0A%0AI%20would%20like%20to%20ask%20about%20your%20services...%0A%0AKind%20regards%2C">
-        <span><i class="fa-regular fa-envelope text-1-125 px-1" aria-hidden="true"></i></span>
-        <span class="text-1-125">parctrainingireland@gmail.com</span>
+    <div class="footer-links py-3">
+      <a class="text-1-000 py-2 px-4 rounded" href="mailto:parctrainingireland@gmail.com?subject=Hello!&body=Hello%2C%0A%0AI%20would%20like%20to%20ask%20about%20your%20services...%0A%0AKind%20regards%2C">
+        <span><i class="fa-regular fa-envelope px-1" aria-hidden="true"></i></span>
+        <span class="">parctrainingireland@gmail.com</span>
       </a>
     </div>
   </div>
