--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
         <li class="py-4"><a href="#">contact</a></li>
       </ul>
     </div>
-    <div class="py-3">
+    <div class="py-4">
       <a href="https://www.linkedin.com/company/parc-training-ireland/" class="link-linkedin" target="_blank" aria-label="Linkedin">
         <i class="fa-brands fa-linkedin-in text-parc-red bg-white" aria-hidden="true"></i>
       </a>
     </div>
-    <div class="footer-links py-3">
-      <a class="text-1-000 py-2 px-4 rounded" href="mailto:parctrainingireland@gmail.com?subject=Hello!&body=Hello%2C%0A%0AI%20would%20like%20to%20ask%20about%20your%20services...%0A%0AKind%20regards%2C">
-        <span><i class="fa-regular fa-envelope px-1" aria-hidden="true"></i></span>
-        <span class="">parctrainingireland@gmail.com</span>
+    <div class="footer-links py-4">
+      <a class="text-1-125 py-2 px-4 rounded" href="mailto:parctrainingireland@gmail.com?subject=Hello!&body=Hello%2C%0A%0AI%20would%20like%20to%20ask%20about%20your%20services...%0A%0AKind%20regards%2C">
+        <span class="text-1-125"><i class="fa-regular fa-envelope px-1" aria-hidden="true"></i></span>
+        <span class="text-1-125">parctrainingireland@gmail.com</span>
       </a>
     </div>
   </div>
