STYLE: Responsive - our expertise card

--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
       <div class="py-3">
         <div class="our-expertise-card">
           <div class="d-flex gap-3">
-            <span>
-              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
+            <span class="our-expertise-title">
+              <img class="" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
             </span> 
-            <span>
+            <span class="">
               <h2 class="py-3 text-parc-red">consultancy</h2>
             </span> 
           </div>
