--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
       <div class="py-3">
         <div class="our-expertise-card">
           <div class="d-flex gap-3">
-            <span class="our-expertise-title">
-              <img class="" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
+            <span class="">
+              <img class="img-parc-logomark" src="assets/images/parc-logomark-red.svg" alt="PARC logomark red">
             </span> 
             <span class="">
               <h2 class="py-3 text-parc-red">consultancy</h2>
